--- a/st_prime/frontend/package.json
+++ b/st_prime/frontend/package.json
@@ -8,7 +8,13 @@
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
-    "type-check": "vue-tsc --build --force"
+    "type-check": "vue-tsc --build --force",
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:debug": "playwright test --debug",
+    "test:codegen": "playwright codegen http://localhost:8501"
   },
   "dependencies": {
     "@primevue/core": "^4.1.1",
@@ -32,6 +38,11 @@
     "tailwindcss": "^3.4.14",
     "typescript": "~5.3.0",
     "vite": "^5.0.10",
-    "vue-tsc": "^2.1.6"
+    "vue-tsc": "^2.1.6",
+    "@testing-library/vue": "^8.0.1",
+    "@vue/test-utils": "^2.4.4",
+    "vitest": "^1.2.1",
+    "jsdom": "^24.0.0",
+    "@playwright/test": "^1.42.1"
   }
 }
