--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -29,7 +29,9 @@ jobs:
 
     - name: Install Python dependencies
       run: |
-        uv pip install -e ../..
+        cd ../..
+        uv sync
+        cd st_prime/frontend
 
     - name: Set up Node.js
       uses: actions/setup-node@v3
@@ -52,4 +54,4 @@ jobs:
       with:
         name: playwright-report
         path: st_prime/frontend/playwright-report/
-        retention-days: 30 
+        retention-days: 30
