--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,14 +3,8 @@ name = "st-prime"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.11"
-dependencies = [
-    "numpy>=2.1.2",
-    "pandas>=2.2.3",
-    "streamlit>=1.39.0",
-]
+requires-python = ">=3.9"
+dependencies = ["numpy>=2.1.2", "pandas>=2.2.3", "streamlit>=1.39.0"]
 
 [tool.uv]
-dev-dependencies = [
-    "pyright>=1.1.386",
-]
+dev-dependencies = ["pyright>=1.1.386"]
