--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.9"
-dependencies = ["numpy>=2.1.2", "pandas>=2.2.3", "streamlit>=1.39.0"]
+dependencies = ["numpy>=1.24.0,<2.0.0", "pandas>=2.2.3", "streamlit>=1.39.0"]
 
 [tool.uv]
 dev-dependencies = ["pyright>=1.1.386"]
