--- a/st_prime/frontend/package.json
+++ b/st_prime/frontend/package.json
@@ -14,7 +14,7 @@
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:debug": "playwright test --debug",
-    "test:codegen": "playwright codegen http://localhost:8501"
+    "test:codegen": "concurrently \"cd .. && streamlit run app.py\" \"npm run dev\" \"wait-on http://localhost:5173 && wait-on http://localhost:8501 && playwright codegen http://localhost:8501\""
   },
   "dependencies": {
     "@primevue/core": "^4.1.1",
@@ -27,22 +27,24 @@
     "vue": "^3.3.11"
   },
   "devDependencies": {
+    "@playwright/test": "^1.42.1",
+    "@testing-library/vue": "^8.0.1",
     "@tsconfig/node18": "^18.2.2",
     "@types/node": "^18.19.3",
     "@vitejs/plugin-vue": "^4.5.2",
+    "@vue/test-utils": "^2.4.4",
     "@vue/tsconfig": "^0.5.0",
     "autoprefixer": "^10.4.20",
+    "concurrently": "^8.2.2",
+    "jsdom": "^24.0.0",
     "npm-run-all2": "^6.1.1",
     "postcss": "^8.4.47",
     "postcss-import": "^16.1.0",
     "tailwindcss": "^3.4.14",
     "typescript": "~5.3.0",
     "vite": "^5.0.10",
-    "vue-tsc": "^2.1.6",
-    "@testing-library/vue": "^8.0.1",
-    "@vue/test-utils": "^2.4.4",
     "vitest": "^1.2.1",
-    "jsdom": "^24.0.0",
-    "@playwright/test": "^1.42.1"
+    "vue-tsc": "^2.1.6",
+    "wait-on": "^7.2.0"
   }
 }
