--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -9,13 +9,16 @@ on:
 jobs:
   test:
     timeout-minutes: 60
+    container:
+      image: mcr.microsoft.com/playwright:v1.49.0-noble
+      options: --user 1001
     runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: ./st_prime/frontend
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -34,11 +37,9 @@ jobs:
         cd st_prime/frontend
 
     - name: Set up Node.js
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
-        node-version: 18
-        cache: 'npm'
-        cache-dependency-path: ./st_prime/frontend/package-lock.json
+        node-version: lts/*
 
     - name: Install dependencies
       run: npm ci
