--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -44,11 +44,8 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
-    - name: Install Playwright Browsers
-      run: yarn playwright install --with-deps chromium
-
     - name: Run Playwright tests
-      run: npm run test:e2e
+      run: npx playwright test
 
     - uses: actions/upload-artifact@v3
       if: always()
